turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:34: error: illegal start of statement
	match rule(state)(colorId)(nextState){
        ^